--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body background="ima.jpg">
 
 <div class="imagen"><img src="titulo.png"></div>
-<a class="periodo1" href="https://isajara.github.io/entrega1/">Periodo 1</a>
+<a class="periodo1" href="https://isajara.github.io/periodo1/">Periodo 1</a>
 <a class="periodo2" href="#">Periodo 2</a>
 <a class="periodo3" href="#">Periodo 3</a>
 <a class="periodo4" href="#">Periodo 4</a>
