--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="imagen"><img src="titulo.png"></div>
 <a class="periodo1" href="https://isajara.github.io/periodo1/">Periodo 1</a>
-<a class="periodo2" href="#">Periodo 2</a>
+<a class="periodo2" href="https://isajara.github.io/periododos/">Periodo 2</a>
 <a class="periodo3" href="#">Periodo 3</a>
 <a class="periodo4" href="#">Periodo 4</a>
 <div class="fondo"></div>
